--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <th>Godina</th>
                 <th>Smjer</th>
                 <th>Izbrisi</th>
+                <th>Polozeno</th>
             </tr>
         </thead>
         <tbody id="table-body">
